feat: aplicar efetividade de tipo no cálculo de dano