@@ -81,51 +81,104 @@ class DamageCalculatorTest {
     }
 
     @Test
-    void deveAplicarStabAoDanoFinalInteiro() {
-        DamageCalculationInput input = new DamageCalculationInput(
-                20,
-                40,
-                50,
-                50,
-                PokemonType.FIRE,
-                List.of(PokemonType.FIRE)
-        );
-
-        int damage = calculator.calculateDamage(input);
-
-        assertThat(damage).isEqualTo(15);
+    void deveAplicarEfetividadeSimples() {
+        assertThat(damage(PokemonType.FIRE, List.of(PokemonType.NORMAL), List.of(PokemonType.GRASS))).isEqualTo(20);
+        assertThat(damage(PokemonType.FIRE, List.of(PokemonType.NORMAL), List.of(PokemonType.WATER))).isEqualTo(5);
+        assertThat(damage(PokemonType.ELECTRIC, List.of(PokemonType.NORMAL), List.of(PokemonType.GROUND))).isZero();
+        assertThat(damage(PokemonType.NORMAL, List.of(PokemonType.FIRE), List.of(PokemonType.GHOST))).isZero();
+        assertThat(damage(PokemonType.NORMAL, List.of(PokemonType.FIRE), List.of(PokemonType.NORMAL))).isEqualTo(10);
     }
 
     @Test
-    void deveArredondarDanoFinalComStabParaBaixo() {
-        DamageCalculationInput input = new DamageCalculationInput(
-                13,
-                40,
-                50,
-                50,
-                PokemonType.FIRE,
-                List.of(PokemonType.FIRE)
-        );
-
-        int damage = calculator.calculateDamage(input);
-
-        assertThat(damage).isEqualTo(10);
+    void deveAplicarEfetividadeComDoisTiposDefensores() {
+        assertThat(damage(PokemonType.FIRE, List.of(PokemonType.NORMAL), List.of(PokemonType.GRASS, PokemonType.STEEL)))
+                .isEqualTo(40);
+        assertThat(damage(PokemonType.FIRE, List.of(PokemonType.NORMAL), List.of(PokemonType.WATER, PokemonType.ROCK)))
+                .isEqualTo(2);
+        assertThat(damage(PokemonType.ELECTRIC, List.of(PokemonType.NORMAL), List.of(PokemonType.WATER, PokemonType.FLYING)))
+                .isEqualTo(40);
+        assertThat(damage(PokemonType.ELECTRIC, List.of(PokemonType.NORMAL), List.of(PokemonType.WATER, PokemonType.GROUND)))
+                .isZero();
+        assertThat(damage(PokemonType.FIGHTING, List.of(PokemonType.NORMAL), List.of(PokemonType.NORMAL, PokemonType.DARK)))
+                .isEqualTo(40);
+        assertThat(damage(PokemonType.GROUND, List.of(PokemonType.NORMAL), List.of(PokemonType.FIRE, PokemonType.FLYING)))
+                .isZero();
     }
 
     @Test
-    void deveManterDanoFinalSemStab() {
+    void deveCombinarStabComEfetividade() {
+        assertThat(damage(PokemonType.FIRE, List.of(PokemonType.FIRE), List.of(PokemonType.GRASS))).isEqualTo(30);
+        assertThat(damage(PokemonType.WATER, List.of(PokemonType.WATER), List.of(PokemonType.FIRE))).isEqualTo(30);
+        assertThat(damage(PokemonType.POISON, List.of(PokemonType.GRASS, PokemonType.POISON), List.of(PokemonType.FAIRY)))
+                .isEqualTo(30);
+    }
+
+    @Test
+    void deveRetornarZeroQuandoEfetividadeForImunidade() {
         DamageCalculationInput input = new DamageCalculationInput(
                 20,
                 40,
                 50,
                 50,
                 PokemonType.NORMAL,
-                List.of(PokemonType.FIRE)
+                List.of(PokemonType.NORMAL),
+                List.of(PokemonType.GHOST)
         );
 
         int damage = calculator.calculateDamage(input);
 
-        assertThat(damage).isEqualTo(10);
+        assertThat(damage).isZero();
+    }
+
+    @Test
+    void naoDeveAplicarDanoMinimoEmCasoDeImunidade() {
+        DamageCalculationInput input = new DamageCalculationInput(
+                1,
+                1,
+                1,
+                Integer.MAX_VALUE,
+                PokemonType.ELECTRIC,
+                List.of(PokemonType.ELECTRIC),
+                List.of(PokemonType.GROUND)
+        );
+
+        int damage = calculator.calculateDamage(input);
+
+        assertThat(damage).isZero();
+    }
+
+    @Test
+    void deveArredondarDanoFinalParaBaixo() {
+        DamageCalculationInput input = new DamageCalculationInput(
+                13,
+                40,
+                50,
+                50,
+                PokemonType.FIRE,
+                List.of(PokemonType.FIRE),
+                List.of(PokemonType.WATER)
+        );
+
+        int damage = calculator.calculateDamage(input);
+
+        assertThat(damage).isEqualTo(5);
+    }
+
+    @Test
+    void deveAplicarDanoMinimoQuandoMultiplicadorFinalForMaiorQueZero() {
+        DamageCalculationInput input = new DamageCalculationInput(
+                1,
+                1,
+                1,
+                Integer.MAX_VALUE,
+                PokemonType.FIRE,
+                List.of(PokemonType.NORMAL),
+                List.of(PokemonType.WATER, PokemonType.ROCK)
+        );
+
+        int damage = calculator.calculateDamage(input);
+
+        assertThat(damage).isEqualTo(1);
     }
 
     @Test
@@ -158,21 +211,24 @@ class DamageCalculatorTest {
 
     @Test
     void deveLancarExcecaoQuandoMoveTypeForNulo() {
-        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, null, List.of(PokemonType.FIRE)))
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, null,
+                List.of(PokemonType.FIRE), List.of(PokemonType.NORMAL)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("Tipo do movimento");
     }
 
     @Test
     void deveLancarExcecaoQuandoTiposDoAtacanteForemNulos() {
-        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE, null))
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                null, List.of(PokemonType.NORMAL)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("Tipos do atacante");
     }
 
     @Test
     void deveLancarExcecaoQuandoTiposDoAtacanteEstiveremVazios() {
-        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE, List.of()))
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(), List.of(PokemonType.NORMAL)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("ao menos um tipo do atacante");
     }
@@ -180,7 +236,7 @@ class DamageCalculatorTest {
     @Test
     void deveLancarExcecaoQuandoHouverMaisDeDoisTiposDoAtacante() {
         assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
-                List.of(PokemonType.FIRE, PokemonType.FLYING, PokemonType.DRAGON)))
+                List.of(PokemonType.FIRE, PokemonType.FLYING, PokemonType.DRAGON), List.of(PokemonType.NORMAL)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("maximo dois tipos");
     }
@@ -188,7 +244,7 @@ class DamageCalculatorTest {
     @Test
     void deveLancarExcecaoQuandoHouverTipoDoAtacanteNulo() {
         assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
-                Collections.singletonList(null)))
+                Collections.singletonList(null), List.of(PokemonType.NORMAL)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("Tipo do atacante");
     }
@@ -196,7 +252,47 @@ class DamageCalculatorTest {
     @Test
     void deveLancarExcecaoQuandoHouverTiposDoAtacanteDuplicados() {
         assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
-                List.of(PokemonType.FIRE, PokemonType.FIRE)))
+                List.of(PokemonType.FIRE, PokemonType.FIRE), List.of(PokemonType.NORMAL)))
+                .isInstanceOf(ValidacaoDominioException.class)
+                .hasMessageContaining("duplicados");
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoTiposDoDefensorForemNulos() {
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(PokemonType.FIRE), null))
+                .isInstanceOf(ValidacaoDominioException.class)
+                .hasMessageContaining("Tipos defensores");
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoTiposDoDefensorEstiveremVazios() {
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(PokemonType.FIRE), List.of()))
+                .isInstanceOf(ValidacaoDominioException.class)
+                .hasMessageContaining("ao menos um tipo defensor");
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoHouverMaisDeDoisTiposDoDefensor() {
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(PokemonType.FIRE), List.of(PokemonType.FIRE, PokemonType.FLYING, PokemonType.DRAGON)))
+                .isInstanceOf(ValidacaoDominioException.class)
+                .hasMessageContaining("maximo dois tipos");
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoHouverTipoDoDefensorNulo() {
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(PokemonType.FIRE), Collections.singletonList(null)))
+                .isInstanceOf(ValidacaoDominioException.class)
+                .hasMessageContaining("Tipo defensor");
+    }
+
+    @Test
+    void deveLancarExcecaoQuandoHouverTiposDoDefensorDuplicados() {
+        assertThatThrownBy(() -> new DamageCalculationInput(5, 40, 49, 49, PokemonType.FIRE,
+                List.of(PokemonType.FIRE), List.of(PokemonType.FIRE, PokemonType.FIRE)))
                 .isInstanceOf(ValidacaoDominioException.class)
                 .hasMessageContaining("duplicados");
     }
@@ -211,6 +307,20 @@ class DamageCalculatorTest {
         assertThat(secondDamage).isEqualTo(firstDamage);
     }
 
+    private int damage(PokemonType moveType, List<PokemonType> attackerTypes, List<PokemonType> defenderTypes) {
+        DamageCalculationInput input = new DamageCalculationInput(
+                20,
+                40,
+                50,
+                50,
+                moveType,
+                attackerTypes,
+                defenderTypes
+        );
+
+        return calculator.calculateDamage(input);
+    }
+
     private DamageCalculationInput input(int attackerLevel, int movePower, int attack, int defense) {
         return new DamageCalculationInput(
                 attackerLevel,
@@ -218,6 +328,7 @@ class DamageCalculatorTest {
                 attack,
                 defense,
                 PokemonType.NORMAL,
+                List.of(PokemonType.NORMAL),
                 List.of(PokemonType.NORMAL)
         );
     }
